# satteri

./: .gitignore  .oxfmtrc.json  AGENTS.md  CONTRIBUTING.md  Cargo.toml  ISSUE-162-FINDINGS.md  README.md  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.agents/skills/add-satteri-feature/: SKILL.md
.agents/skills/fix-satteri-bug/: SKILL.md
.agents/skills/navigate-satteri/: SKILL.md
.github/workflows/: benchmark.yml  ci.yml  deploy-website.yml  release.yml
.sampo/: config.toml
.sampo/changesets/: ancient-baron-vellamo.md  autolink-angle-brackets.md  autolink-literal-conformance.md  autolink-parsing-perf.md  browser-export.md  ctx-filename-url.md  ctx-fileurl.md  ctx-source-format.md  custom-mdast-node-types.md  definition-list.md  directive-fragment-in-code-span.md  directive-label-and-fence.md  directive-nested-transforms.md  emphasis-strikethrough-order.md  expose-arena-methods.md  fabled-duchess-vellamo.md  feat-binary-plugin-protocol.md  feat-ctx-data.md  feat-restore-perf.md  fix-ctx-source-string-heap-leak.md  fix-mdx-esm-template-blank-line.md  fix-mdx-inline-math-braces.md  fix-mdx-jsx-in-attribute-expression.md  fix-mdx-jsx-regex-quotes.md  fix-mdx-top-level-await.md  fix-multibyte-position-offsets.md  fix-raw-html-braces.md  fix-wasm-async-init.md  footnotes-in-directives.md  frozen-plugin-nodes.md  frozen-shared-nodes.md  gallant-prince-ahti.md  hast-positions.md  hast-prelude-data-format.md  haughty-princess-goulven.md  heading-attributes-emit.md  heading-attrs-directive-conflict.md  html-to-hast.md  markdown-to-js.md  math-single-dollar.md  (+24 more)
crates/bench/: Cargo.toml
crates/bench/benches/: pipeline.rs
crates/bench/src/: lib.rs  profile_parse.rs
crates/hast/: Cargo.toml
crates/hast/src/: from_binary.rs  lib.rs  serialize.rs  to_binary.rs
crates/hast/tests/: binary_roundtrip.rs  convert.rs  serialize.rs
crates/mdast/src/: arena.rs  codec.rs  commands.rs  jsx_attr_parser.rs  lib.rs
crates/mdxjs-rs/: Cargo.toml
crates/mdxjs-rs/examples/: lib.rs
crates/mdxjs-rs/src/: configuration.rs  lib.rs  mdast_to_hast.rs  oxc.rs
crates/mdxjs-rs/tests/: mdast_to_hast.rs  test.rs
crates/napi-binding/: Cargo.toml
crates/napi-binding/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/parser/tests/: integration.rs
crates/plugin-api/: Cargo.toml
crates/pulldown-cmark/src/: firstpass.rs  parse.rs  scanners.rs
crates/pulldown-cmark/tests/: mdx.rs
crates/satteri/: CHANGELOG.md  Cargo.toml
crates/satteri-arena/: CHANGELOG.md  Cargo.toml
crates/satteri-arena/src/: arena.rs  builder.rs  kind.rs  lib.rs  line_index.rs  node.rs  raw_buffer.rs
crates/satteri-ast/: CHANGELOG.md  Cargo.toml
crates/satteri-ast/src/: commands.rs  convert.rs  lib.rs  patch.rs  rebuild.rs  shared.rs  text_content.rs  walk.rs
crates/satteri-ast/src/hast/: codec.rs  from_html.rs  mod.rs  properties.rs  render.rs
crates/satteri-ast/src/mdast/: codec.rs  mod.rs
crates/satteri-ast/tests/: arena_construction.rs  arena_reuse.rs  convert_positions.rs  footnote_options.rs  html.rs  patch.rs  raw_buffer.rs  rebuild.rs  string_refs.rs  type_data.rs
crates/satteri-hast/: Cargo.toml
crates/satteri-layout-codegen/src/: emit.rs  main.rs  schema.rs
crates/satteri-mdast/: Cargo.toml
crates/satteri-mdxjs-rs/: CHANGELOG.md  Cargo.toml
crates/satteri-mdxjs-rs/src/: hast_util_to_oxc.rs  lib.rs  mdx_plugin_recma_document.rs  oxc_util_build_jsx.rs
crates/satteri-mdxjs-rs/tests/: test.rs
crates/satteri-napi-binding/: CHANGELOG.md  Cargo.toml
crates/satteri-napi-binding/src/: lib.rs
crates/satteri-plugin-api/: CHANGELOG.md  Cargo.toml
crates/satteri-plugin-api/src/: commands.rs  context.rs  js_commands.rs  lib.rs  plugin.rs  runner.rs  typed_nodes.rs
crates/satteri-plugin-api/tests/: commands.rs  patch_integration.rs  plugin_basics.rs  rebuild_integration.rs  runner.rs
crates/satteri-property-info/: CHANGELOG.md  Cargo.toml
crates/satteri-property-info/src/: lib.rs  tables.rs
crates/satteri-pulldown-cmark/: CHANGELOG.md  Cargo.toml  build.rs
crates/satteri-pulldown-cmark/specs/: blockquotes_tags.txt  container_extensions.txt  definition_list.txt  definition_lists.txt  footnotes.txt  math_multi_dollar.txt  metadata_blocks.txt  regression.txt  smartypants.txt  table.txt  wikilinks.txt
crates/satteri-pulldown-cmark/src/: arena_build.rs  firstpass.rs  html.rs  lib.rs  mdx.rs  parse.rs  post_passes.rs  scanners.rs  tree.rs
crates/satteri-pulldown-cmark/tests/: deflist_directive.rs  directive_inline.rs  empty_list.rs  heading_attrs_directive.rs  lib.rs  math_single_dollar.rs  mdx.rs  mdx_heading_attributes.rs  mdx_math.rs  smart_punct_granular.rs
crates/tryckeri-arena/src/: arena.rs  builder.rs  lib.rs  line_index.rs  raw_buffer.rs
crates/tryckeri-hast/src/: codec.rs  convert.rs  from_binary.rs  lib.rs  render.rs  to_binary.rs
crates/tryckeri-hast/tests/: html.rs
crates/tryckeri-mdast/src/: arena.rs  codec.rs  commands.rs  lib.rs  raw_buffer.rs  read_arena.rs  rebuild.rs  walk.rs
crates/tryckeri-mdast/tests/: line_index.rs  raw_buffer.rs  rebuild.rs  string_refs.rs  type_data.rs
crates/tryckeri-mdxjs-rs/src/: hast_util_to_oxc.rs  lib.rs
crates/tryckeri-napi-binding/src/: lib.rs
crates/tryckeri-parser/src/: lib.rs
examples/: basic.ts  hast-plugin.ts  mdast-plugin.ts
plans/: fix-fuzzes-and-fixes-review.md  hname-hproperties-hchildren.md  remaining-conformance-issues.md
playground/: index.html  package.json  vite.config.ts
playground/src/: main.ts  prin.css
website/: Cargo.toml  package.json  tsconfig.json  wrangler.toml
website/assets/: demo.ts  docs.ts  pagefind.ts  playground.ts  prin.css  theme.ts
website/content/docs/: asts.md  compile.md  divergences.md  entry-points.md  features.md  index.md  installation.md  options.md  plugin-api.md  plugins.md  quick-start.md  vite.md
website/src/: content.rs  docs_layout.rs  layout.rs  main.rs  shortcodes.rs
website/src/routes/: chat.rs  docs.rs  index.rs  mod.rs  playground.rs
website/static/: _headers
(+26 files in other folders)
