[package]
name = "satteri-website"
version = "0.1.0"
edition = "2024"
publish = false

[package.metadata.maudit]
intended_version = "0.11.2"

# Standalone workspace: not part of the markdown-fast-rs Cargo workspace.
[workspace]

[dependencies]
maudit = "0.11.2"
maud = "0.27.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1.0" }
