[package]
name = "satteri-website"
version = "0.1.0"
edition = "2024"
publish = false


# Standalone workspace: not part of the markdown-fast-rs Cargo workspace.
[workspace]

[dependencies]
maudit = "0.12.0"
maud = "0.27.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1.0" }
pagefind = { version = "1.5.2", default-features = false }
tokio = { version = "1.52.3", features = ["full"] }
