[package]
name = "satteri-bench"
version = "0.1.0"
edition = "2021"
publish = false
description = "Benchmarks and profiling harnesses for Sätteri"
license = "MIT"

[[bench]]
name = "pipeline"
harness = false

[[bin]]
name = "profile_parse"
path = "src/profile_parse.rs"


[dependencies]
satteri-pulldown-cmark = { path = "../satteri-pulldown-cmark" }

[dev-dependencies]
divan = { version = "4", package = "codspeed-divan-compat" }
satteri-hast = { path = "../satteri-hast" }
satteri-mdxjs = { path = "../satteri-mdxjs-rs" }
oxc_allocator = { workspace = true }
rustc-hash = "2"
satteri-pulldown-cmark = { path = "../satteri-pulldown-cmark" }
