[package]
name = "satteri-ast"
version = "0.4.1"
edition = "2021"
description = "MDAST and HAST node types, codecs, tree operations, and conversion for Sätteri"
license = "MIT"

[dependencies]
html5ever = { version = "0.39", optional = true }
pulldown-cmark-escape = "0.11"
rustc-hash = { workspace = true }
satteri-arena = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }

[dev-dependencies]
satteri-pulldown-cmark = { path = "../satteri-pulldown-cmark", features = ["std", "mdx"] }

[features]
default = ["mdx"]
# satteri-ast has no oxc/mdxjs deps; `mdx` only toggles MDX node codecs,
# conversion arms, and JSX attr helpers. The dev-dep parser builds with its
# own default features (mdx on), so the parity tests keep compiling.
mdx = []
# `from-html` pulls in html5ever's tree builder for the HTML -> HAST parser.
# It is opt-in so size-conscious consumers can drop html5ever entirely.
from-html = ["dep:html5ever"]
