[package]
name = "satteri-plugin-api"
version = "0.1.0"
edition = "2021"
description = "Rust plugin trait, typed visitors, and runner for Sätteri"
license = "MIT"

[dependencies]
satteri-arena = { version = "0.1.0", path = "../satteri-arena" }
satteri-mdast = { version = "0.1.0", path = "../satteri-mdast" }
rustc-hash = "2"
